--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
   <h1>Store Inventory Demo</h1>
+  <p>Open the console to see logs. Output is also shown below.</p>
+
+  <h2>Output</h2>
+  <pre id="output"></pre>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
