--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <title>Store Inventory - JS Classes</title>
+  <style>
+  body {
+    font-family: Arial, sans-serif;
+    max-width: 800px;
+    margin: 2rem auto;
+    padding: 1rem;
+    line-height: 1.5;
+  }
+
+  pre {
+    background: #f5f5f5;
+    padding: 1rem;
+    border-radius: 8px;
+    white-space: pre-wrap;
+  }
+</style>
 </head>
 <body>
   <h1>Store Inventory Demo</h1>
